2001-02-12  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (html_text_magic_link): save and restore cursor
	position
	(html_text_magic_link): wrapped in one undo step
	(paste_link): ops, removed level step here

2001-02-09  Radek Doulik  <rodo@ximian.com>

	* htmldrawqueue.c (html_draw_queue_flush): do clear/draw_obj only
	if GtkHTML has window

	* htmliframe.c (draw): use parent_class draw method for non
	printer painters

	* htmlembedded.c: reworked size calculation/allocation, removed
	ugly hacks ;-)

	* gtkhtml-embedded.c (gtk_html_embedded_new): don't set
	resize_mode to QUEUE

	* gtkhtml.c (gtk_html_set_default_content_type): take care of
	content_type == NULL

2001-02-08  Frederic Crozat <fcrozat@mandrakesoft.com>

	* gtkhtml.c (client_notify_widget): rename font_var_family and
	font_fix_family to font_var and font_fix

2001-02-08  Radek Doulik  <rodo@ximian.com>

	* htmltable.c (divide_left_by_preferred_width): expand only
	columns with pref > fixed

	* htmltext.c (merge_word_width): fixed

2001-02-07  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c (draw): use HTML_IS_PRINTER to detect printer object
	cleanly. (from Dave Benson <daveb@ffem.org>)

	* htmltokenizer.c (html_tokenizer_end): clear dest.
	(html_tokenizer_reset): free the token buffer list, and clear dest
	and size. (from Dave Benson <daveb@ffem.org>)

2001-02-01  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (mouse_change_pos): allow a little bit of motion
	before we decide it isn't a click on a url.  This should probably be
	reworked to function more like netscape over urls.

2001-02-01  Radek Doulik  <rodo@ximian.com>

	* htmlcursor.c (html_cursor_end_of_line): take care of objects
	with different height on one line
	(html_cursor_beginning_of_line): ditto
	(html_cursor_up): ditto
	(html_cursor_down): ditto

2001-02-01  Larry Ewing  <lewing@ximian.com>

	* htmlembedded.c (calc_size): fix the bug I introduced last week
	that caused htmliframes too loop in their size negotiation.
